@@ -159,11 +159,15 @@ class ResolveCommand(CLICommand):
 class RestoreCommand(CLICommand):
     __command__ = 'restore'
 
+    def add_arguments(self, subparser):
+        subparser.add_argument('-m', '--message', action='store_true',
+                               help='Prompt for a custom commit message')
+
     def do(self, args):
         """Apply the patch series to the the current branch of the
         working-repo"""
         try:
-            self.working_repo.restore()
+            self.working_repo.restore(custom_commit_msg=args.message)
         except plypatch.exc.GitConfigRequired as e:
             die("Required git config '%s' is unset." % e)
         except plypatch.exc.RestoreInProgress:
@@ -192,11 +196,13 @@ class SaveCommand(CLICommand):
 
     def add_arguments(self, subparser):
         subparser.add_argument('-s', '--since')
+        subparser.add_argument('-m', '--message', action='store_true',
+                               help='Prompt for a custom commit message')
 
     def do(self, args):
         """Save set of commits to patch-repo"""
         try:
-            self.working_repo.save(args.since)
+            self.working_repo.save(args.since, custom_commit_msg=args.message)
         except plypatch.exc.NoPatchesApplied:
             die('No patches applied, so cannot detect new patches to save')
         except plypatch.exc.UncommittedChanges:
